<resources>
    <string name="hey_duncan">Hey Duncan!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_shoutout">Post Shoutout</string>
    <string name="author">Author</string>
    <string name="who_s_a_good_roo">Who\'s a good roo?</string>
    <string name="cancel">Cancel</string>
    <string name="events">Events</string>
    <string name="todo_put_profile_here">TODO: put profile here</string>
    <string name="todo_put_events_here">TODO: put events here</string>
    <string name="create_announcement">Create announcement</string>
    <string name="cancel_underlined"><u>Cancel</u></string>
    <string name="new_announcement">New announcement</string>
    <string name="announcement_title">Announcement Title</string>
    <string name="announcement_body">Announcement body</string>
    <string name="pin_announcement_to_top_of_page">Pin announcement to top of page</string>
    <string name="post_announcement">Post announcement</string>
    <string name="post_to_facebook">Post to Facebook</string>
    <string name="send_to_listserv">Send to Listserv</string>
    <string name="profile_image">Profile image</string>
    <string name="cynthia_sheng">Cynthia Sheng</string>
    <string name="dot">\u25CF</string>
    <string name="peace_love_duncan">Peace, love, Duncan</string>
    <string name="president">President</string>
    <string name="add_position">+ add position</string>
    <string name="cys4">cys4</string>
    <string name="new_shoutout">New shoutout/stuff</string>
    <string name="shoutout_shit_title">Name</string>
    <string name="shoutout_shit_body">Message</string>
    <string name="post_shoutout_shit">Post shoutout/stuff</string>
    <string name="create_shoutout_shit">Create Shoutout/Stuff</string>
    <string name="name">[Name]</string>
    <string name="netid">NetID</string>
    <string name="bio">bio</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="edit_profile">Edit profile</string>
    <string name="suggested_tags">Suggested Tags</string>
    <string name="action_filter">filter</string>
    <string name="apply_filter">Apply Filters</string>
    <string name="food">Food</string>
    <string name="alcohol">Alcohol</string>
    <string name="health">Health &amp; Wellness</string>
    <string name="arts">Arts &amp; Music</string>
    <string name="discussion">Discussion</string>
    <string name="forums">Forums</string>
    <string name="competition">Competition</string>
    <string name="date">Date</string>
    <string name="format">Format</string>
    <string name="audience">Audience</string>
    <string name="remote">Remote</string>
    <string name="in_person">In-person</string>
    <string name="Campus_wide">Campus-wide</string>
    <string name="Duncaroos_only">Duncaroos-only</string>
    <string name="title">Title</string>
    <string name="add_event_title">Add Event Title</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="location_hint">ex. 123 Main St. or Coffeehouse</string>
    <string name="description">Description</string>
    <string name="description_hint">Add description</string>
    <string name="tags">Tags</string>
    <string name="add_event_image"><u>Add event image</u></string>
    <string name="post_event">Post event</string>
    <string name="start_date"><u>start date</u></string>
    <string name="end_date"><u>end date</u></string>
    <string name="start_time"><u>start time</u></string>
    <string name="end_time"><u>end time</u></string>
    <string name="dash">-</string>
    <string name="read_duncan_s_statement_of_allyship_nand_solidarity"><u>Read Duncan\'s statement of allyship\nand solidarity</u></string>
    <string name="to_the_duncan_family_n_nthe_recent_surfacing_of_the_senseless_killings_of_george_floyd_ahmaud_aubrey_breonna_taylor_and_several_others_have_further_emphasized_the_issues_of_racial_inequality_that_our_country_has_and_continues_to_face_as_a_community_we_are_deeply_impacted_by_these_tragedies_and_the_reminder_they_bring_of_the_social_injustice_that_exists_in_the_world_and_in_the_rice_community_n_nwe_strive_to_raise_awareness_for_these_injustices_and_are_dedicated_to_starting_within_our_residential_college_we_write_this_to_state_that_duncan_is_committed_to_creating_an_environment_that_values_and_supports_our_black_duncaroos_we_are_challenging_our_non_black_duncaroos_to_commit_to_being_anti_racist_inclusive_and_unwavering_in_their_allyship_we_will_have_zero_tolerance_for_discrimination_and_will_make_efforts_to_amplify_black_voices_and_encourage_inclusivity_n_nwe_understand_that_this_burden_is_not_for_black_americans_to_take_alone_we_stand_in_active_solidarity_with_the_black_community_we_realize_that_many_of_our_fellow_black_duncaroos_are_grieving_and_exhausted_from_taking_on_this_fight_alone_it_is_up_to_us_to_stand_with_our_peers_and_promise_to_extend_allyship_beyond_our_words_with_this_in_mind_we_have_included_a_thorough_list_of_resources_to_do_that_we_encourage_you_to_review_all_contents_of_this_document_we_understand_the_work_that_it_will_take_to_fix_the_problems_of_racism_in_this_country_but_we_also_understand_that_change_starts_with_action_this_document_is_full_of_ways_to_actively_support_the_black_community_and_improve_allyship_through_education_voting_signing_petitions_and_much_more_n_nto_be_silent_is_to_be_complicit_and_we_as_a_college_will_not_stay_silent_on_issues_that_affect_our_family_and_the_black_community_n_nsomos_equipos_somos_familia">To the Duncan Family,\n\nThe recent surfacing of the senseless killings of George Floyd, Ahmaud Aubrey, Breonna Taylor and several others have further emphasized the issues of racial inequality that our country has and continues to face. As a community, we are deeply impacted by these tragedies and the reminder they bring of the social injustice that exists in the world and in the Rice community.\n\nWe strive to raise awareness for these injustices and are dedicated to starting within our residential college. We write this to state that Duncan is committed to creating an environment that values and supports our Black Duncaroos. We are challenging our non-Black Duncaroos to commit to being anti-racist, inclusive, and unwavering in their allyship. We will have zero tolerance for discrimination and will make efforts to amplify Black voices and encourage inclusivity.\n\nWe understand that this burden is not for Black Americans to take alone. We stand in active solidarity with the Black community. We realize that many of our fellow Black Duncaroos are grieving and exhausted from taking on this fight alone. It is up to us to stand with our peers and promise to extend allyship beyond our words. With this in mind, we have included a thorough list of resources to do that. We encourage you to review all contents of this document. We understand the work that it will take to fix the problems of racism in this country, but we also understand that change starts with action. This document is full of ways to actively support the Black community and improve allyship through education, voting, signing petitions and much more.\n\nTo be silent is to be complicit, and we as a college will not stay silent on issues that affect our family and the Black community.\n\nSomos Equipos, Somos Familia</string>
    <string name="website">Website</string>
    <string name="duncan_website_graphic">Duncan website graphic</string>
    <string name="mark_as_urgent">Mark as urgent</string>
    <string name="show_more"><u>Show more</u></string>
    <string name="show_less"><u>Show less</u></string>
    <string name="urgent">Urgent</string>
    <string name="delete_event">Delete Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="save_event">Save Event</string>
    <string name="users_attending">Users Attending</string>
    <string name="admin_password">Admin password</string>
    <string name="login">Log In</string>
    <string name="login_msg">Log in with your Rice NetID and password!</string>
    <string name="please_sign_in_using_your_esther_credentials">Please sign in using your NETID and CANVAS credentials</string>
    <string name="coming_soon">Coming soon!</string>
</resources>