<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ShoutoutsFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shoutouts_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_weight="2"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/author"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/who_s_a_good_roo"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/postButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/post_shoutout" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="#808080"
                android:text="@string/cancel"
                tools:targetApi="lollipop" />
        </LinearLayout>

        <Button
            android:id="@+id/navEventsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/events" />
    </LinearLayout>
</layout>