<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg"
        android:padding="25dp"
        tools:context=".shoutouts.ShoutoutsCreateFragment">

        <TextView
            android:id="@+id/newShoutoutHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_shoutout"
            android:textColor="@color/olive"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cancelShoutoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/cancel_underlined"
            android:textColor="@color/greyText"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/newShoutoutHeader"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/newShoutoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:hint="@string/shoutout_shit_title"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newShoutoutHeader" />

        <EditText
            android:id="@+id/newShoutoutTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shoutout_shit_body"
            android:inputType="textMultiLine"
            android:textSize="20sp"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newShoutoutTitle" />

        <Button
            android:id="@+id/postNewShoutoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_shoutout_shit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newShoutoutTxt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>